@@ -1,0 +1,12 @@
+releases = {
+    '0': 'Aftermath',
+    '1': 'Bewitched',
+    '2': 'Carefree',
+    '3': 'Deadbeef',
+    '4': 'Extravagant',
+    '5': 'Fumbler',
+    '6': 'Gonzalez',
+    '7': 'Hero',
+    '8': 'Interceptor',
+    '9': 'Jumper',
+}
